# gym_app

./: .dockerignore  .gitignore  client-app.html  compose.yml  dashboard.html  index.html  readme.md  script.js  styles.css
apps/: Dockerfile.web
apps/admin_app/: pubspec.yaml
apps/admin_app/android/app/: build.gradle.kts
apps/admin_app/android/app/src/main/kotlin/io/abhaydhakal/admin_app/: MainActivity.kt
apps/admin_app/ios/Runner.xcodeproj/: project.pbxproj
apps/admin_app/lib/: app.dart  main.dart
apps/admin_app/lib/screens/: admin_shell.dart  login_screen.dart  super_admin_shell.dart
apps/client_app/: pubspec.yaml
apps/client_app/android/app/: build.gradle.kts
apps/client_app/ios/Runner.xcodeproj/: project.pbxproj
apps/client_app/lib/: app.dart  main.dart
apps/client_app/lib/screens/: auth_screen.dart  client_shell.dart
backend/: .env.example  Dockerfile  pyproject.toml
backend/abhay_method_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: admin.py  auth.py  client.py  realtime.py  super_admin.py
backend/app/core/: config.py  security.py
backend/app/db/: migrations.py  session.py
backend/app/models/: __init__.py  base.py  entities.py
backend/app/schemas/: admin.py  auth.py  client.py  super_admin.py
backend/app/services/: billing.py  challenges.py  maintenance.py  message_hub.py  notifications.py  organizations.py  program_templates.py  reports.py  seed.py
backend/data/: platform.db
backend/tests/: test_app.py
(+1 files in other folders)
