[project]
name = "abhay-method-backend"
version = "0.1.0"
description = "API backend for the Abhay Method coaching platform."
requires-python = ">=3.13"
dependencies = [
  "bcrypt==5.0.0",
  "email-validator==2.3.0",
  "fastapi==0.135.3",
  "httpx==0.28.1",
  "jinja2==3.1.6",
  "python-multipart==0.0.24",
  "sqlalchemy==2.0.49",
  "uvicorn[standard]==0.44.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
